--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,12 @@ repository = "https://github.com/LiamGallagher737/cratui"
 
 [dependencies]
 tui = "0.19"
-crossterm = "0.25"
-serde = { version = "1.0", features = ["derive"] }
+crossterm = { default-features = false, version = "0.25" }
+serde = { version = "1.0", features = ["serde_derive"], default-features = false }
 toml = "0.5"
 toml_edit = "0.15"
 open = "3.2"
-ureq = { version = "2.5", features = ["json"] }
+ureq = { version = "2.5", features = ["json"], default-features = false }
 anyhow = "1.0"
 directories = "4.0"
 smart-default = "0.6"
